# algorithmic-botany

./: .envrc  .gitignore  CMakeLists.txt  README.md  build.sh
scripts/: koch_island.py  rewriting.py
